--- a/src/Makefile
+++ b/src/Makefile
@@ -1,11 +1,11 @@
 output: main.o pathfinder.o
-	g++ -gdb main.o pathfinder.o -o pathfinder
+	g++ -g main.o pathfinder.o -o pathfinder
 
 main.o: main.cpp
-	g++ -std=gnu++11 -c main.cpp
+	g++ -g -std=gnu++11 -c main.cpp
 
 pathfinder.o: pathfinder.cpp
-	g++ -std=gnu++11 -c pathfinder.cpp
+	g++ -g -std=gnu++11 -c pathfinder.cpp
 
 clean:
 	rm *.o pathfinder	
